--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -89,10 +89,12 @@
 
 
     <android.support.design.widget.NavigationView
+        android:id="@+id/navigationViewLayout"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu = "@menu/drawer_view"
-        android:layout_gravity = "start">
+        android:layout_gravity = "start"
+        app:headerLayout="@layout/navigation_header">
 
     </android.support.design.widget.NavigationView>
 
