--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,9 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id = "@+id/nav_account"
-        android:title="My account" />
-    <item android:id = "@+id/setting"
-        android:title="Settings" />
-    <item android:id = "@+id/logout"
-        android:title="logout" />
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <group android:checkableBehavior="single"
+        android:id="@+id/gid1">
+        <item
+            android:id="@+id/home"
+            android:title="@string/home" />
+        <item
+            android:id="@+id/nav_account"
+            android:title="@string/nav_account" />
+    </group>
+
+    <group android:checkableBehavior="single"
+        android:id="@+id/gid2">
+        <item
+            android:id="@+id/time_table"
+            android:title="@string/time_table" />
+        <item
+            android:id="@+id/holiday_list"
+            android:title="Holiday List" />
+        <item
+            android:id="@+id/imp_contacts"
+            android:title="@string/imp_contacts" />
+    </group>
+
+    <group android:checkableBehavior="single"
+        android:id="@+id/gid3">
+        <item
+            android:id="@+id/help"
+            android:title="@string/help" />
+        <item
+            android:id="@+id/feedback"
+            android:title="@string/feedback" />
+        <item
+            android:id="@+id/about"
+            android:title="@string/about" />
+    </group>
+
+    <group android:checkableBehavior="single"
+        android:id="@+id/gid4">
+        <item
+            android:id="@+id/setting"
+            android:title="@string/setting" />
+        <item
+            android:id="@+id/logout"
+            android:title="@string/logout" />
+    </group>
 </menu>
