--- a/app/src/main/res/layout/fragment_complaint_portal.xml
+++ b/app/src/main/res/layout/fragment_complaint_portal.xml
@@ -16,6 +16,8 @@
 
     <Button
         android:id="@+id/complaintSendButton"
+        android:layout_below="@+id/complaintPortalText"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
