Fetching driver details from server

--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -6,12 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.RecyclerView
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="This is from tab 2"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="229dp" />
+        android:layout_width="match_parent"
+        android:id="@+id/rv_notifications">
+
+    </android.support.v7.widget.RecyclerView>
+
+
 </android.support.constraint.ConstraintLayout>
