--- a/app/src/main/res/layout/bus_track_item_card.xml
+++ b/app/src/main/res/layout/bus_track_item_card.xml
@@ -1,42 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
-    >
+    app:cardCornerRadius="8dp"
+    app:cardElevation="8dp"
+    android:layout_margin="10sp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#FFFFFF"
         android:padding="16dp">
 
         <TextView
-            android:id="@+id/driver_name"
+            android:id="@+id/bus_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
+            android:text="1"
+            android:textStyle="bold"
+            android:textSize="20sp"/>
+
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Driver Name"
+            android:layout_below="@+id/bus_id"
+            android:layout_toRightOf="@+id/bus_id"
             android:textSize="30sp" />
 
         <TextView
-            android:id="@+id/driverNumber"
+            android:id="@+id/mobile"
             android:text="Driver Number"
-            android:layout_below="@+id/driver_name"
+            android:layout_below="@+id/name"
+            android:layout_toRightOf="@+id/bus_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/bus_number"
+            android:id="@+id/bus_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/driverNumber" />
+            android:text="bus number"
+            android:layout_below="@+id/mobile"
+            android:layout_toRightOf="@+id/bus_id" />
 
-        <View
-            android:layout_width="fill_parent"
-            android:id="@+id/horizontalLine"
-            android:layout_below="@+id/bus_number"
-            android:layout_height="2dp"
-            android:background="#c0c0c0" />
 
         <Button
             android:id="@+id/track"
