--- a/app/src/main/res/layout/activity_feedback_form.xml
+++ b/app/src/main/res/layout/activity_feedback_form.xml
@@ -13,14 +13,16 @@
         android:layout_alignParentStart="true"
         android:layout_margin="20dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="89dp" />
+        android:layout_marginTop="89dp"
+        android:layout_alignParentLeft="true" />
 
     <Button
         android:id="@+id/feedbackSubmit"
         android:layout_width="wrap_content"
-        android:layout_below="@+id/feedbackReview"
-        android:layout_marginTop="40dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/feedbackReview"
         android:layout_centerInParent="true"
+        android:layout_marginTop="40dp"
+        android:elevation="0dp"
         android:text="Submit Feedback" />
 </RelativeLayout>
