--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -1,19 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/navigation_header_container"
     android:layout_width="match_parent"
     android:layout_height="180dp"
-    android:background="?attr/colorPrimaryDark"
+    android:background="@drawable/navicon"
     android:gravity="bottom"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="10dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
+ <ImageView
+     android:id="@+id/imageView"
+     android:layout_width="49dp"
+     android:layout_height="52dp"
+     android:layout_alignParentStart="true"
+     android:layout_alignParentLeft="true"
+     android:layout_alignParentBottom="true"
+     android:layout_marginStart="10dp"
+     android:layout_marginLeft="10dp"
+     android:layout_marginBottom="40dp"
+     android:adjustViewBounds="false"
+     android:background="@color/Grey"
+     android:cropToPadding="false"
+     android:elevation="5sp"
+     app:srcCompat="@drawable/usericon" />
+
  <TextView
-     android:id="@+id/text_view"
-     android:layout_width="match_parent"
-     android:layout_height="44dp"
-     android:text="@string/businga"
-     android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
-</LinearLayout>
+     android:id="@+id/textView2"
+     android:layout_width="218dp"
+     android:layout_height="wrap_content"
+     android:layout_alignStart="@+id/imageView"
+     android:layout_alignLeft="@+id/imageView"
+     android:layout_alignParentBottom="true"
+     android:layout_marginStart="0dp"
+     android:layout_marginLeft="0dp"
+     android:layout_marginBottom="20dp"
+     android:text="Mayur Varshney"
+     android:textColor="@android:color/background_light"
+     android:textStyle="bold" />
+
+ <TextView
+     android:id="@+id/textView4"
+     android:layout_width="221dp"
+     android:layout_height="wrap_content"
+     android:layout_alignStart="@+id/textView2"
+     android:layout_alignLeft="@+id/textView2"
+     android:layout_alignParentBottom="true"
+     android:layout_marginLeft="0dp"
+     android:layout_marginBottom="2dp"
+     android:text="abc@gmail.com"
+     android:textColor="@android:color/background_light" />
+
+</RelativeLayout>
