--- a/app/src/main/res/layout/notification_item_card.xml
+++ b/app/src/main/res/layout/notification_item_card.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/cv_notification">
+    android:id="@+id/cv_notification"
+    android:layout_margin="12sp">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,12 +16,15 @@
             android:layout_margin="10dp"
             android:id="@+id/notification_header"
             android:layout_height="wrap_content" />
+
         <TextView
-            android:layout_width="match_parent"
             android:id="@+id/notification_body"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_below="@+id/notification_header"
-            android:layout_margin="20dp"
-            android:layout_height="wrap_content" />
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="47dp"
+            android:layout_marginBottom="20dp" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
