--- a/app/src/main/res/menu/drawer_view.xml
+++ b/app/src/main/res/menu/drawer_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:tools="http://schemas.android.com/tools"
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android">
+
     <group android:checkableBehavior="single"
         android:id="@+id/gid1">
         <item
@@ -15,9 +17,11 @@
         android:id="@+id/gid2">
         <item
             android:id="@+id/time_table"
+            android:icon="@drawable/imptdatesicon"
             android:title="@string/time_table" />
         <item
             android:id="@+id/holiday_list"
+            android:icon="@drawable/holidayicon"
             android:title="Holiday List" />
         <item
             android:id="@+id/imp_contacts"
