--- a/app/src/main/res/layout/bus_track_item_card.xml
+++ b/app/src/main/res/layout/bus_track_item_card.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="8dp"
-    android:layout_margin="10sp">
+    app:cardCornerRadius="20dp"
+    app:cardElevation="20dp"
+    android:layout_margin="8sp">
 
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/LimeYellow"
-        android:padding="16dp">
+        android:layout_width="wrap_content"
+        android:layout_height="172dp"
+        android:fadingEdge="vertical"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/bus_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
+            android:textColor="@color/Black"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -27,35 +29,57 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/bus_id"
+            android:layout_marginLeft="0dp"
+            android:layout_marginTop="22dp"
             android:layout_toRightOf="@+id/bus_id"
             android:text="Driver Name"
-            android:textSize="30sp" />
+            android:textAllCaps="false"
+            android:textColor="@color/Black"
+            android:textSize="30sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/mobile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/name"
+            android:layout_marginLeft="-1dp"
+            android:layout_marginTop="20dp"
             android:layout_toRightOf="@+id/bus_id"
-            android:text="Driver Number" />
+            android:text="Driver Number"
+            android:textColor="@color/Black"
+            android:textStyle="italic" />
 
         <TextView
             android:id="@+id/bus_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/mobile"
+            android:layout_marginLeft="-2dp"
+            android:layout_marginTop="3dp"
             android:layout_toRightOf="@+id/bus_id"
-            android:text="bus number" />
+            android:text="Bus Number"
+            android:textColor="@color/Black"
+            android:textStyle="italic" />
 
 
         <Button
             android:id="@+id/track"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="107dp"
+            android:layout_height="45dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
-            android:layout_margin="20dp"
-            android:text="Track" />
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="59dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="58dp"
+            android:background="@color/LimeYellow"
+            android:text="Track"
+            android:textStyle="bold|italic"
+            tools:textColor="@color/Black" />
 
     </RelativeLayout>
 
