--- a/app/src/main/res/layout/fragment_complaint_portal.xml
+++ b/app/src/main/res/layout/fragment_complaint_portal.xml
@@ -1,33 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <EditText
         android:id="@+id/complaintPortalText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.EditText"
+        android:layout_width="373dp"
+        android:layout_height="194dp"
         android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="11dp"
-        android:layout_marginLeft="7dp"
-        android:layout_marginTop="106dp"
+        android:layout_marginLeft="11dp"
+        android:layout_marginTop="129dp"
         android:layout_marginRight="7dp"
+        android:background="@android:color/background_light"
+        android:elevation="10dp"
         android:hint="Enter the Complaints here"
-        android:layout_alignParentLeft="true" />
+        android:padding="10dp"
+        android:selectAllOnFocus="false"
+        android:singleLine="true" />
 
     <Button
         android:id="@+id/complaintSendButton"
-        android:layout_width="wrap_content"
+        android:layout_width="151dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/complaintPortalText"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginTop="109dp"
-        android:layout_marginEnd="121dp"
-        android:layout_marginRight="121dp"
-        android:text="Send Complaint" />
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="124dp"
+        android:layout_marginRight="124dp"
+        android:background="@color/LimeYellow"
+        android:text="Send"
+        android:textColor="@color/Black"
+        android:textSize="18sp"
+        android:textStyle="bold|italic" />
 
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="90dp"
+        android:text="Submit a Complaint*"
+        android:textAlignment="center"
+        android:textColor="@color/Black"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:fontFamily="serif" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="156dp"
+        android:text="*This complaint will directly convey to the main authorities."
+        android:textStyle="italic" />
 
 </RelativeLayout>
