--- a/app/src/main/res/layout/notification_item_card.xml
+++ b/app/src/main/res/layout/notification_item_card.xml
@@ -1,30 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/cv_notification"
-    android:layout_margin="12sp">
+    android:layout_margin="10sp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="20dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:fadingEdge="horizontal"
+        android:fadingEdgeLength="@dimen/activity_horizontal_margin"
+        android:gravity="center_vertical|center_horizontal"
+        android:padding="10dp">
 
         <TextView
-            android:layout_width="match_parent"
-            android:layout_margin="10dp"
             android:id="@+id/notification_header"
-            android:layout_height="wrap_content" />
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginLeft="0dp"
+            android:text="HEADER"
+            android:textColor="@color/Black"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:fontFamily="serif-monospace" />
 
         <TextView
             android:id="@+id/notification_body"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:layout_below="@+id/notification_header"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="47dp"
-            android:layout_marginBottom="20dp" />
+            android:layout_alignStart="@+id/notification_header"
+            android:layout_alignLeft="@+id/notification_header"
+            android:layout_marginStart="1dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginTop="-5dp"
+            android:text="Body of the notification"
+            android:textColor="@color/colorPrimaryDark"
+            android:textSize="18sp"
+            app:fontFamily="monospace" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
