--- a/app/src/main/res/layout/bus_track_item_card.xml
+++ b/app/src/main/res/layout/bus_track_item_card.xml
@@ -5,20 +5,22 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cv"
-    app:cardCornerRadius="20dp"
     app:cardElevation="20dp"
     android:layout_margin="8sp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="172dp"
+        android:layout_height="175dp"
+        android:layout_marginTop="-3dp"
+        android:background="@drawable/template2"
         android:fadingEdge="vertical"
         android:padding="10dp">
 
         <TextView
             android:id="@+id/bus_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="30dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
             android:text="1"
             android:textColor="@color/Black"
             android:textSize="20sp"
@@ -29,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/bus_id"
-            android:layout_marginLeft="0dp"
-            android:layout_marginTop="22dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="-52dp"
             android:layout_toRightOf="@+id/bus_id"
             android:text="Driver Name"
             android:textAllCaps="false"
@@ -43,8 +45,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/name"
-            android:layout_marginLeft="-1dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginLeft="3dp"
+            android:layout_marginTop="67dp"
             android:layout_toRightOf="@+id/bus_id"
             android:text="Driver Number"
             android:textColor="@color/Black"
@@ -55,8 +57,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/mobile"
-            android:layout_marginLeft="-2dp"
-            android:layout_marginTop="3dp"
+            android:layout_marginLeft="4dp"
+            android:layout_marginTop="7dp"
             android:layout_toRightOf="@+id/bus_id"
             android:text="Bus Number"
             android:textColor="@color/Black"
@@ -76,10 +78,10 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="58dp"
-            android:background="@color/LimeYellow"
+            android:background="#000000"
             android:text="Track"
-            android:textStyle="bold|italic"
-            tools:textColor="@color/Black" />
+            android:textColor="#ffffff"
+            android:textStyle="bold" />
 
     </RelativeLayout>
 
