--- a/app/src/main/res/layout/fragment_complaint_portal.xml
+++ b/app/src/main/res/layout/fragment_complaint_portal.xml
@@ -10,6 +10,7 @@
         style="@style/Widget.AppCompat.EditText"
         android:layout_width="373dp"
         android:layout_height="194dp"
+        android:maxLines="5"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -18,6 +19,7 @@
         android:layout_marginTop="129dp"
         android:layout_marginRight="7dp"
         android:background="@android:color/background_light"
+        android:inputType="text|textMultiLine|textCapSentences"
         android:elevation="10dp"
         android:hint="Enter the Complaints here"
         android:padding="10dp"
@@ -35,11 +37,11 @@
         android:layout_marginTop="56dp"
         android:layout_marginEnd="124dp"
         android:layout_marginRight="124dp"
-        android:background="@color/LimeYellow"
+        android:background="@color/Black"
         android:text="Send"
-        android:textColor="@color/Black"
+        android:textColor="#ffffff"
         android:textSize="18sp"
-        android:textStyle="bold|italic" />
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView5"
@@ -59,10 +61,19 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/complaintPortalText"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="156dp"
+        android:layout_marginStart="18dp"
+        android:layout_marginTop="320dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginRight="9dp"
+        android:layout_marginBottom="44dp"
         android:text="*This complaint will directly convey to the main authorities."
-        android:textStyle="italic" />
+        android:textStyle="italic"
+        android:layout_marginLeft="18dp"
+        android:layout_alignParentLeft="true" />
 
 </RelativeLayout>
