--- a/app/src/main/res/layout/bus_track_item_card.xml
+++ b/app/src/main/res/layout/bus_track_item_card.xml
@@ -1,29 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/cv"
-    app:cardElevation="20dp"
-    android:layout_margin="8sp">
+    android:layout_margin="2sp"
+    android:layout_marginLeft="2sp"
+    android:layout_marginRight="2sp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="20dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="175dp"
-        android:layout_marginTop="-3dp"
-        android:background="@drawable/template2"
+        android:layout_height="160dp"
+        android:layout_marginTop="2dp"
+        android:background="@drawable/busblur"
         android:fadingEdge="vertical"
         android:padding="10dp">
 
         <TextView
             android:id="@+id/bus_id"
-            android:layout_width="30dp"
-            android:layout_height="50dp"
+            android:layout_width="35dp"
+            android:layout_height="46dp"
             android:layout_alignParentTop="true"
             android:text="1"
-            android:textColor="@color/Black"
-            android:textSize="20sp"
+            android:textColor="@color/Grey"
+            android:textSize="30sp"
             android:textStyle="bold" />
 
         <TextView
@@ -31,12 +34,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/bus_id"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="-52dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginTop="-44dp"
             android:layout_toRightOf="@+id/bus_id"
             android:text="Driver Name"
             android:textAllCaps="false"
-            android:textColor="@color/Black"
+            android:textColor="@color/Grey"
             android:textSize="30sp"
             android:textStyle="bold" />
 
@@ -46,10 +49,10 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/name"
             android:layout_marginLeft="3dp"
-            android:layout_marginTop="67dp"
+            android:layout_marginTop="57dp"
             android:layout_toRightOf="@+id/bus_id"
             android:text="Driver Number"
-            android:textColor="@color/Black"
+            android:textColor="@color/Grey"
             android:textStyle="italic" />
 
         <TextView
@@ -57,11 +60,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/mobile"
-            android:layout_marginLeft="4dp"
-            android:layout_marginTop="7dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginTop="1dp"
             android:layout_toRightOf="@+id/bus_id"
             android:text="Bus Number"
-            android:textColor="@color/Black"
+            android:textColor="@color/Grey"
             android:textStyle="italic" />
 
 
@@ -78,7 +81,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginRight="20dp"
             android:layout_marginBottom="58dp"
-            android:background="#000000"
+            android:background="@color/colorPrimaryDark"
             android:text="Track"
             android:textColor="#ffffff"
             android:textStyle="bold" />
