--- a/app/src/main/res/layout/notification_item_card.xml
+++ b/app/src/main/res/layout/notification_item_card.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv_notification"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/cv_notification"
-    android:layout_margin="10sp"
-    app:cardElevation="20dp"
-    app:cardBackgroundColor="#ffef7a">
+    android:layout_margin="4sp"
+    app:cardCornerRadius="10dp"
+    app:cardElevation="20dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_orange_light"
         android:fadingEdge="horizontal"
         android:fadingEdgeLength="@dimen/activity_horizontal_margin"
         android:gravity="center_vertical|center_horizontal"
@@ -25,10 +25,10 @@
             android:layout_marginStart="0dp"
             android:layout_marginLeft="0dp"
             android:text="HEADER"
-            android:textColor="@color/Black"
+            android:textColor="@color/colorPrimary"
             android:textSize="24sp"
             android:textStyle="bold"
-            app:fontFamily="serif-monospace" />
+            app:fontFamily="@font/tinos_bold" />
 
         <TextView
             android:id="@+id/notification_body"
@@ -42,8 +42,8 @@
             android:layout_marginTop="3dp"
             android:text="Body of the notification"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="18sp"
-            app:fontFamily="monospace" />
+            android:textSize="24sp"
+            app:fontFamily="sans-serif-condensed" />
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
