--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,6 @@
     <color name="colorAccent">#ff4081</color>
     <color name = "darkyellow">#FFDF00</color>
     <color name ="LimeYellow">#eaf8cf67</color>
-    <color name ="Black">#000000</color>
-    <color name ="Grey">#A9A9A9</color>
+    <color name ="Black">#0c0c0c</color>
+    <color name ="Grey">#eaeaea</color>
 </resources>
