--- a/app/src/main/res/layout/bus_track_item_card.xml
+++ b/app/src/main/res/layout/bus_track_item_card.xml
@@ -10,7 +10,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="160dp"
+        android:layout_height="130dp"
         android:layout_marginTop="2dp"
         android:background="@color/Grey"
         android:fadingEdge="vertical"
@@ -31,8 +31,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/bus_id"
+            android:layout_alignParentTop="true"
             android:layout_marginLeft="2dp"
-            android:layout_marginTop="-44dp"
             android:layout_toRightOf="@+id/bus_id"
             android:text="Driver Name"
             android:textAllCaps="false"
@@ -44,10 +44,9 @@
             android:id="@+id/mobile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/name"
-            android:layout_marginLeft="3dp"
-            android:layout_marginTop="55dp"
-            android:layout_toRightOf="@+id/bus_id"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="280dp"
+            android:layout_marginTop="10dp"
             android:text="Driver Number"
             android:textColor="@color/colorPrimary"
             android:textStyle="italic" />
@@ -56,10 +55,8 @@
             android:id="@+id/bus_no"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/mobile"
-            android:layout_marginLeft="1dp"
-            android:layout_marginTop="0dp"
-            android:layout_toRightOf="@+id/bus_id"
+            android:layout_marginLeft="280dp"
+            android:layout_marginTop="30dp"
             android:text="Bus Number"
             android:textColor="@color/colorPrimary"
             android:textStyle="italic" />
@@ -67,18 +64,23 @@
 
         <Button
             android:id="@+id/track"
-            android:layout_width="107dp"
-            android:layout_height="27dp"
+            android:layout_width="146dp"
+            android:layout_height="35dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginRight="31dp"
-            android:layout_marginBottom="13dp"
-            android:background="@color/colorPrimaryDark"
+            android:layout_marginStart="133dp"
+            android:layout_marginLeft="133dp"
+            android:layout_marginEnd="122dp"
+            android:layout_marginRight="122dp"
+            android:layout_marginBottom="10dp"
+            android:background="@color/darkyellow"
             android:text="Track"
+            android:textAllCaps="false"
             android:textColor="#ffffff"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
     </RelativeLayout>
