--- a/app/src/main/res/layout/bus_track_item_card.xml
+++ b/app/src/main/res/layout/bus_track_item_card.xml
@@ -22,8 +22,9 @@
             android:layout_height="46dp"
             android:layout_alignParentTop="true"
             android:text="1"
+            android:layout_marginTop="15sp"
             android:textColor="@color/colorPrimary"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -32,12 +33,13 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/bus_id"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="2dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15sp"
             android:layout_toRightOf="@+id/bus_id"
             android:text="Driver Name"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
-            android:textSize="30sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <TextView
@@ -80,7 +82,7 @@
             android:text="Track"
             android:textAllCaps="false"
             android:textColor="#ffffff"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:textStyle="bold" />
 
     </RelativeLayout>
