--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#565051</color>
-    <color name="colorPrimaryDark">#565051</color>
+    <color name="colorPrimaryDark">#f9a602</color>
     <color name="colorAccent">#ff4081</color>
     <color name = "darkyellow">#f9a602</color>
-    <color name ="LimeYellow">#eaf8cf67</color>
+    <color name ="LimeYellow">#ea7d7a71</color>
     <color name ="Black">#0c0c0c</color>
+    <color name ="blackishYellow">#faf6da</color>>
     <color name ="Grey">#eaeaea</color>
 </resources>
